--- a/installation.html
+++ b/installation.html
@@ -9,8 +9,8 @@
     <meta name="description" content="CasperJS is a browser navigation scripting &amp; testing utility written in Javascript on top of PhantomJS.">
     <meta name="google-site-verification" content="SEcGmVv4IsGYP6-xMJquQcrUrYjIZNXyX0VGfly2m1o">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Asap:400,700,400italic,700italic&amp;subset=latin,latin-ext">
-    <link rel="stylesheet" href="prettify/prettify.css?1343393376980">
-    <link rel="stylesheet" href="css/casper.css?1343393376980">
+    <link rel="stylesheet" href="prettify/prettify.css?1344896851237">
+    <link rel="stylesheet" href="css/casper.css?1344896851237">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
@@ -115,11 +115,11 @@ available in the <code>bin/</code> directory; in order to use the ruby version i
 of the python one:
 
 </p>
-<pre><code>$ ln -sf `pwd`/bin/casperjs_ruby /usr/local/bin/casperjs</code></pre>
+<pre><code>$ ln -sf `pwd`/rubybin/casperjs /usr/local/bin/casperjs</code></pre>
 <p>Or using the ruby interpreter:
 
 </p>
-<pre><code>$ ruby /path/to/casperjs/bin/casperjs_ruby
+<pre><code>$ ruby /path/to/casperjs/rubybin/casperjs
 CasperJS version 1.0.0-RC1 at /Users/niko/Sites/casperjs, using PhantomJS version 1.6.0
 ...</code></pre>
 <h2>Help! I don't have Python nor Ruby (Hi, Windows user)</h2>
@@ -159,10 +159,10 @@ twitter account</a>.
             </p>
         </footer>
     </div>
-    <script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script src="https://apis.google.com/_/apps-static/_/js/gapi/plusone/rt=j/ver=ZBdR4JhOfiA.fr./sv=1/am=!uU4J5St5scCYCF_kSw/d=1/rs=AItRSTO4-kPWP5ntLNqEajRLSvmon2bYPg/cb=gapi.loaded_0" async=""></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js" gapi_processed="true"></script><script type="text/javascript" src="js/jquery.min.js?1343393376980"></script>
-    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js?1343393376980"></script>
-    <script type="text/javascript" src="prettify/prettify.js?1343393376980"></script>
-    <script type="text/javascript" src="js/application.js?1343393376980"></script>
+    <script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script src="https://apis.google.com/_/apps-static/_/js/gapi/plusone/rt=j/ver=HY9p6vay2e0.en_US./sv=1/am=!9WWg3hgFJrKAVXxNQA/d=1/rs=AItRSTNB8Fia3XwNbKRkrBG4FoP0ywMLTQ/cb=gapi.loaded_0" async=""></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js" gapi_processed="true"></script><script type="text/javascript" src="js/jquery.min.js?1344896851237"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js?1344896851237"></script>
+    <script type="text/javascript" src="prettify/prettify.js?1344896851237"></script>
+    <script type="text/javascript" src="js/application.js?1344896851237"></script>
     <script type="text/javascript">
     (function() {
         var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
